--- a/ProyectoFinal/Views/Empleados/Delete.cshtml
+++ b/ProyectoFinal/Views/Empleados/Delete.cshtml
@@ -12,6 +12,22 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
+            @Html.DisplayNameFor(model => model.cargo.Cargo)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.cargo.Cargo)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.departamento.Nombre)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.departamento.Nombre)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.CodigoEmpleado)
         </dt>
 
@@ -65,22 +81,6 @@
 
         <dd>
             @Html.DisplayFor(model => model.Estatus)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.IdDepartamento)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.IdDepartamento)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.IdCargo)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.IdCargo)
         </dd>
 
     </dl>
