--- a/ProyectoFinal/Views/Empleados/Edit.cshtml
+++ b/ProyectoFinal/Views/Empleados/Edit.cshtml
@@ -74,17 +74,17 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.IdDepartamento, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.IdDepartamento, "IdDepartamento", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.IdDepartamento, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownList("IdDepartamento", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.IdDepartamento, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.IdCargo, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.IdCargo, "IdCargo", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.IdCargo, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownList("IdCargo", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.IdCargo, "", new { @class = "text-danger" })
             </div>
         </div>
