--- a/ProyectoFinal/Views/Shared/_Layout.cshtml
+++ b/ProyectoFinal/Views/Shared/_Layout.cshtml
@@ -6,14 +6,46 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <style>
+
+        body{
+            padding:0;
+            margin:0;
+        }
+
+    </style>
 </head>
 <body>
-  
+    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+        <a class="navbar-brand" href="#">M&A solutions</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="http://localhost:58667/empleados">Mantenimiento</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Procesos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Informes</a>
+                </li>
+
+            </ul>
+        </div>
+    </nav>
+
+
     <div class="container body-content">
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - M&A .Net Application</p>
         </footer>
     </div>
 
