--- a/ProyectoFinal/Views/Home/Index.cshtml
+++ b/ProyectoFinal/Views/Home/Index.cshtml
@@ -1,8 +1,9 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
+<link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
 
-<div class="bd-example mt-5 mx-auto" style="width:80%" >
+<div class="bd-example mx-auto mt-2">
     <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
             <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
@@ -10,25 +11,25 @@
             <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
         </ol>
         <div class="carousel-inner">
-            <img src="https://cdn.pixabay.com/photo/2018/06/16/16/20/career-3478983_960_720.jpg"/>
-            <div class="carousel-item active ">
+            <div class="carousel-item active">
+                <img src="https://cdn.pixabay.com/photo/2018/06/16/16/20/career-3478983_960_720.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>First slide label</h5>
-                    <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                    <h5 >Envíanos tu curr&iacute;culum</h5>
+                    <p>No requerimos años de experiencia.</p>
                 </div>
             </div>
             <div class="carousel-item">
                 <img src="https://cdn.pixabay.com/photo/2018/06/02/22/58/career-3449422_960_720.png" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>Second slide label</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <h5>Estamos contratando</h5>
+                    <p>Personal capacitado en Desarrollo de Software.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="https://cdn.pixabay.com/photo/2017/04/06/09/16/interview-2207741_960_720.jpg" class="d-block w-100" alt="...">
+                <img src="https://cdn.pixabay.com/photo/2018/02/03/16/11/avatar-3127928_960_720.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>Third slide label</h5>
-                    <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+                    <h5>Evaluamos sin distinción</h5>
+                    <p>Nuestra política de no discriminación forma parte de nuestra visión empresarial.</p>
                 </div>
             </div>
         </div>
@@ -42,9 +43,13 @@
         </a>
     </div>
 </div>
+
+
+<hr />
+
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
+    <h1>M&A Solutions</h1>
+    <p class="lead">Somos una empresa lider a la hora de ofrecer soluciones tecnologicas, desde pequeñas a grandes compañías nosotros podemos hacerte la vida más cómoda.</p>
     <p><button class="btn btn-primary" type="button" disabled>
     <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
     Loading...
@@ -53,22 +58,20 @@
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+        <h2>Paginas Web</h2>
+        <p style="font-family: 'Josefin Sans', sans-serif; font-size:18px;">
+           Tenemos personal especializado en el área de Marketing digital para brindarle una increíble experiencia.
         </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <h2>Aplicaciones Móviles</h2>
+        <p style="font-family: 'Josefin Sans', sans-serif; font-size:18px;">Ofrecemos soluciones en forma de aplicaciones móviles para tu negocio.</p>
+        
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <h2>Programas de Escritorio</h2>
+        <p style="font-family: 'Josefin Sans', sans-serif; font-size:18px;">Programas utiles para realizar procesos administrativos o de oficina, diseñados por nuestros devs.</p>
+        
     </div>
 </div>
