--- a/ProyectoFinal/Views/Cargos/Index.cshtml
+++ b/ProyectoFinal/Views/Cargos/Index.cshtml
@@ -10,13 +10,14 @@
     @Html.ActionLink("Create New", "Create")
 </p>
 <table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Cargo)
-        </th>
-        <th></th>
-    </tr>
-
+    <thead class="thead-dark">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Cargo)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
 @foreach (var item in Model) {
     <tr>
         <td>
