--- a/ProyectoFinal/Views/Empleados/Create.cshtml
+++ b/ProyectoFinal/Views/Empleados/Create.cshtml
@@ -7,15 +7,15 @@
 <h2>Create</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>Empleados</h4>
-        <hr />
+    <h4>Empleados</h4>
+    <hr />
+    <div class="form-row">
+
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
+        <div class="form-group col-md-4">
             @Html.LabelFor(model => model.CodigoEmpleado, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.CodigoEmpleado, new { htmlAttributes = new { @class = "form-control" } })
@@ -23,7 +23,7 @@
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group col-md-4">
             @Html.LabelFor(model => model.Nombre, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control" } })
@@ -31,7 +31,7 @@
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group col-md-4">
             @Html.LabelFor(model => model.Apellido, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Apellido, new { htmlAttributes = new { @class = "form-control" } })
@@ -39,7 +39,7 @@
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group col-md-4">
             @Html.LabelFor(model => model.Telefono, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Telefono, new { htmlAttributes = new { @class = "form-control" } })
@@ -47,7 +47,7 @@
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group col-md-4">
             @Html.LabelFor(model => model.FechaIngreso, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.FechaIngreso, new { htmlAttributes = new { @class = "form-control" } })
@@ -55,7 +55,7 @@
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group col-md-4">
             @Html.LabelFor(model => model.Salario, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Salario, new { htmlAttributes = new { @class = "form-control" } })
@@ -63,7 +63,7 @@
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group col-md-4">
             @Html.LabelFor(model => model.Estatus, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Estatus, new { htmlAttributes = new { @class = "form-control" } })
@@ -71,7 +71,7 @@
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group col-md-4">
             @Html.LabelFor(model => model.IdDepartamento, "IdDepartamento", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("IdDepartamento", null, htmlAttributes: new { @class = "form-control" })
@@ -79,17 +79,17 @@
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group col-md-4">
             @Html.LabelFor(model => model.IdCargo, "IdCargo", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("IdCargo", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.IdCargo, "", new { @class = "text-danger" })
             </div>
         </div>
-
+        
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+            <div class="col-md-2 col-mt-10">
+                <input type="submit" value="Create" class="btn btn-danger" />
             </div>
         </div>
     </div>
