Front-end terminado

--- a/ProyectoFinal/Views/Shared/_Layout.cshtml
+++ b/ProyectoFinal/Views/Shared/_Layout.cshtml
@@ -19,7 +19,9 @@
 
     <div>
         <nav class="navbar navbar-expand-lg navbar-light bg-primary">
-            <a class="navbar-brand" href="http://localhost:58667/Home/Index">M&A solutions</a>
+            <a class="navbar-brand" href="http://localhost:58667/Home/Index">
+            <img style="width:15%" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ4H-T2GJEZQU34niYuYMPnpXdFdD0Vm5PL18kafFVwV8Gf7-HC"/>
+            M&A solutions</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
