se habilito procesos en el navbar poniendo en el menu la nomina

--- a/ProyectoFinal/Views/Shared/_Layout.cshtml
+++ b/ProyectoFinal/Views/Shared/_Layout.cshtml
@@ -38,8 +38,13 @@
                             <a class="dropdown-item" href="http://localhost:58667/cargos">Cargo</a>
                         </div>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" href="#">Procesos</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle active" href="" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Procesos</a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="http://localhost:58667/Nominas">Nomina</a>
+                            
+                        </div>
+                        
                     </li>
                     <li class="nav-item">
                         <a class="nav-link disabled" href="#">Informes</a>
