se creo  el modulo de permisos y se agrego al menu del navbar

--- a/ProyectoFinal/Views/Shared/_Layout.cshtml
+++ b/ProyectoFinal/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="http://localhost:58667/Nominas">Nomina</a>
                             <a class="dropdown-item" href="http://localhost:58667/Vacaciones">Vacaciones</a>
-
+                            <a class="dropdown-item" href="http://localhost:58667/Permisos">Permisos</a>
                         </div>
                         
                     </li>
