se creo el modeulo de licencias y se agrego al menu

--- a/ProyectoFinal/Views/Shared/_Layout.cshtml
+++ b/ProyectoFinal/Views/Shared/_Layout.cshtml
@@ -44,6 +44,12 @@
                             <a class="dropdown-item" href="http://localhost:58667/Nominas">Nomina</a>
                             <a class="dropdown-item" href="http://localhost:58667/Vacaciones">Vacaciones</a>
                             <a class="dropdown-item" href="http://localhost:58667/Permisos">Permisos</a>
+                            <a class="dropdown-item" href="http://localhost:58667/Licencias">Licencias</a>
+
+
+
+
+
                         </div>
                         
                     </li>
