--- a/ProyectoFinal/Views/Shared/_Layout.cshtml
+++ b/ProyectoFinal/Views/Shared/_Layout.cshtml
@@ -45,6 +45,7 @@
                             <a class="dropdown-item" href="http://localhost:58667/Vacaciones">Vacaciones</a>
                             <a class="dropdown-item" href="http://localhost:58667/Permisos">Permisos</a>
                             <a class="dropdown-item" href="http://localhost:58667/Licencias">Licencias</a>
+                            <a class="dropdown-item" href="http://localhost:58667/Salidas">Salidas</a>
 
 
 
