Cambios en las vistas e Informes habilitados

--- a/ProyectoFinal/Views/Shared/_Layout.cshtml
+++ b/ProyectoFinal/Views/Shared/_Layout.cshtml
@@ -33,19 +33,19 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle active" href="" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Mantenimiento</a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="http://localhost:58667/empleados">Empleado</a>
-                            <a class="dropdown-item" href="http://localhost:58667/departamentos">Departamento</a>
-                            <a class="dropdown-item" href="http://localhost:58667/cargos">Cargo</a>
+                            <a class="dropdown-item" href="http://localhost:58667/empleados/Create">Empleado</a>
+                            <a class="dropdown-item" href="http://localhost:58667/departamentos/Create">Departamento</a>
+                            <a class="dropdown-item" href="http://localhost:58667/cargos/Create">Cargo</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle active" href="" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Procesos</a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="http://localhost:58667/Nominas">Nomina</a>
-                            <a class="dropdown-item" href="http://localhost:58667/Vacaciones">Vacaciones</a>
-                            <a class="dropdown-item" href="http://localhost:58667/Permisos">Permisos</a>
-                            <a class="dropdown-item" href="http://localhost:58667/Licencias">Licencias</a>
-                            <a class="dropdown-item" href="http://localhost:58667/Salidas">Salidas</a>
+                            <a class="dropdown-item" href="http://localhost:58667/Nominas/Create">Nomina</a>
+                            <a class="dropdown-item" href="http://localhost:58667/Vacaciones/Create">Vacaciones</a>
+                            <a class="dropdown-item" href="http://localhost:58667/Permisos/Create">Permisos</a>
+                            <a class="dropdown-item" href="http://localhost:58667/Licencias/Create">Licencias</a>
+                            <a class="dropdown-item" href="http://localhost:58667/Salidas/Create">Salidas</a>
 
 
 
@@ -54,8 +54,14 @@
                         </div>
                         
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" href="#">Informes</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle active" href="" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Informes</a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="http://localhost:58667/Nominas/Index">Nomina</a>
+                           
+
+                        </div>
+
                     </li>
 
                 </ul>
