Informe de departamentos y cargos creado

--- a/ProyectoFinal/Views/Shared/_Layout.cshtml
+++ b/ProyectoFinal/Views/Shared/_Layout.cshtml
@@ -58,9 +58,11 @@
                         <a class="nav-link dropdown-toggle active" href="" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Informes</a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="http://localhost:58667/Nominas/Index">Nomina</a>
-                           
+                            <a class="dropdown-item" href="http://localhost:58667/Cargos/Index">Cargos</a>
+                            <a class="dropdown-item" href="http://localhost:58667/Departamentos/Index">Departamentos</a>
 
-                        </div>
+
+</div>
 
                     </li>
 
