--- a/ProyectoFinal/Views/Nominas/Index.cshtml
+++ b/ProyectoFinal/Views/Nominas/Index.cshtml
@@ -9,37 +9,120 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.AÑO)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Mes)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Montototal)
-        </th>
-        <th></th>
-    </tr>
+@using (Html.BeginForm())
+{
+<div class="input-group">
+    <div class="input-group-prepend">
+        <label class="input-group-text">Busqueda por Mes</label>
+    </div>
+    <select class="custom-select" name="fechanom">
+        <option value="1">1. Enero</option>
+        <option value="2">2. Febrero</option>
+        <option value="3">3. Marzo</option>
+        <option value="4">4. Abril</option>
+        <option value="5">5. Mayo</option>
+        <option value="6">6. Junio</option>
+        <option value="7">7. Julio</option>
+        <option value="8">8. Agosto</option>
+        <option value="9">9. Septiembre</option>
+        <option value="10">10. Octubre</option>
+        <option value="11">11. Noviembre</option>
+        <option value="12">12. Diciembre</option>
+    </select>
+    </div>
+    <div class="input-group">
+        <div class="input-group-prepend">
+            <label class="input-group-text">Busqueda por Año</label>
+        </div>
+        <select class="custom-select" name="fechaye">
+            <option value="1959">1959</option>
+            <option value="1962">1962</option>
+            <option value="1967">1967</option>
+           <option value="1969">1969</option> 
+            <option value="1970">1970</option>
+            <option value="1977">1977</option>
+            <option value="1978">1978</option>
+            <option value="1980">1980</option>
+            <option value="1993">1993</option>
+            <option value="1994">1994</option>
+            <option value="1995">1995</option>
+            <option value="1996">1996</option>
+            <option value="1997">1997</option>
+            <option value="1998">1998</option>
+            <option value="1999">1999</option>
+            <option value="2000">2000</option>
+            <option value="2001">2001</option>
+            <option value="2002">2002</option>
+            <option value="2003">2003</option>
+           <option value="2004">2004</option> 
+            <option value="2005">2005</option>
+           <option value="2006">2006</option> 
+            <option value="2007">2007</option>
+            <option value="2008">2008</option>
+            <option value="2009">2009</option>
+           <option value="2010">2010</option> 
+           <option value="2011">2011</option> 
+            <option value="2012" >2012</option>
+            <option value="2013">2013</option>
+            <option value="2014">2014</option>
+            <option value="2015">2015</option>
+            <option value="2016">2016</option>
+            <option value="2017">2017</option>
+            <option value="2018">2018</option> 
+            <option value="2019"> 2019</option>
+            <option value="2020"> 2020</option>
+            <option value="2021"> 2021</option>
+            <option value="2022"> 2022</option>
+            <option value="2023"> 2023</option>
+            <option value="2024"> 2024</option>
+            <option value="2025"> 2025</option>
+            <option value="2026"> 2026</option>
+            <option value="2027"> 2027</option>
+            <option value="2028"> 2028</option>
+            <option value="2029"> 2029</option>
+            <option value="2030"> 2030</option>
+          
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.AÑO)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Mes)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Montototal)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
+        </select>
 
-</table>
+        <input type="submit" value="Buscar" class="btn btn-outline-success form-control" />
+        <a href="http://localhost:58667/Nominas" class="btn btn-outline-success form-control">Volver a Lista</a>
+    </div>
+    }
+
+ 
+    <table class="table">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.AÑO)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Mes)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Montototal)
+            </th>
+            <th></th>
+        </tr>
+
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.AÑO)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Mes)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Montototal)
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                    @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                </td>
+            </tr>
+        }
+
+    </table>
