se agrego el buscar por nombre y departamento en empleados

--- a/ProyectoFinal/Views/Empleados/Index.cshtml
+++ b/ProyectoFinal/Views/Empleados/Index.cshtml
@@ -9,76 +9,87 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table class="table">
-    <thead class="thead-dark">
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.cargo.Cargo)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.departamento.Nombre)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CodigoEmpleado)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Nombre)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Apellido)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Telefono)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.FechaIngreso)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Salario)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Estatus)
-            </th>
-            <th></th>
+@using (Html.BeginForm())
+{
+    <div class="form-actions no-color d-flex justify-content-between">
+        <input type="search" name="no" value="" class="form-control" placeholder="Buscar por nombre...">
+        <input type="search" name=" de" value="" class="form-control" placeholder="Buscar por Departamento...">
+        <input type="submit" value="Buscar" class="btn btn-outline-success form-control" />
+        <a href="http://localhost:58667/Empleados" class="btn btn-outline-success form-control">Volver a Lista</a>
+    </div>
+}
 
-        </tr>
-    </thead>
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.cargo.Cargo)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.departamento.Nombre)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CodigoEmpleado)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Nombre)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Apellido)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Telefono)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FechaIngreso)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Salario)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Estatus)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-            </td>
-        </tr>
-    }
+<br>
+    <table class="table">
+        <thead class="thead-dark">
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.cargo.Cargo)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.departamento.Nombre)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.CodigoEmpleado)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Nombre)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Apellido)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Telefono)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.FechaIngreso)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Salario)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Estatus)
+                </th>
+                <th></th>
 
-</table>
+            </tr>
+        </thead>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.cargo.Cargo)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.departamento.Nombre)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CodigoEmpleado)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Nombre)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Apellido)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Telefono)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.FechaIngreso)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Salario)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Estatus)
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                    @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                </td>
+            </tr>
+        }
+
+    </table>
