--- a/ProyectoFinal/Views/Shared/_Layout.cshtml
+++ b/ProyectoFinal/Views/Shared/_Layout.cshtml
@@ -60,9 +60,10 @@
                             <a class="dropdown-item" href="http://localhost:58667/Nominas/Index">Nomina</a>
                             <a class="dropdown-item" href="http://localhost:58667/Cargos/Index">Cargos</a>
                             <a class="dropdown-item" href="http://localhost:58667/Departamentos/Index">Departamentos</a>
+                            <a class="dropdown-item" href="http://localhost:58667/Empleados/Index">Empleados Activos</a>
 
 
-</div>
+                        </div>
 
                     </li>
 
