--- a/ProyectoFinal/Views/Shared/_Layout.cshtml
+++ b/ProyectoFinal/Views/Shared/_Layout.cshtml
@@ -61,6 +61,7 @@
                             <a class="dropdown-item" href="http://localhost:58667/Cargos/Index">Cargos</a>
                             <a class="dropdown-item" href="http://localhost:58667/Departamentos/Index">Departamentos</a>
                             <a class="dropdown-item" href="http://localhost:58667/Empleados/Index">Empleados Activos</a>
+                            <a class="dropdown-item" href="http://localhost:58667/Permisos/Index">Permisos</a>
 
 
                         </div>
