--- a/ProyectoFinal/Views/Shared/_Layout.cshtml
+++ b/ProyectoFinal/Views/Shared/_Layout.cshtml
@@ -62,6 +62,8 @@
                             <a class="dropdown-item" href="http://localhost:58667/Departamentos/Index">Departamentos</a>
                             <a class="dropdown-item" href="http://localhost:58667/Empleados/Index">Empleados Activos</a>
                             <a class="dropdown-item" href="http://localhost:58667/Permisos/Index">Permisos</a>
+                            <a class="dropdown-item" href="http://localhost:58667/Empleados/Inactivos">Empleados Inactivos</a>
+                            <a class="dropdown-item" href="http://localhost:58667/Empleados/Entradas">Entrada Empleados</a>
 
 
                         </div>
