arregle los botones del diseño puse rojo en las vistas de los informes

--- a/ProyectoFinal/Views/Empleados/Entradas.cshtml
+++ b/ProyectoFinal/Views/Empleados/Entradas.cshtml
@@ -12,7 +12,7 @@
         <input type="search" name="fecha" value="" class="form-control" placeholder="Buscar por Mes...">
 
         <input type="submit" value="Buscar" class="btn btn-outline-danger form-control" />
-        <a href="http://localhost:58667/Empleados" class="btn btn-outline-danger form-control">Volver a Lista</a>
+        <a href="http://localhost:58667/Empleados/Entradas" class="btn btn-outline-danger form-control">Volver a Lista</a>
     </div>
 }
 <table class="table">
