--- a/ProyectoFinal/Views/Nominas/Index.cshtml
+++ b/ProyectoFinal/Views/Nominas/Index.cshtml
@@ -85,8 +85,8 @@
 
         </select>
 
-        <input type="submit" value="Buscar" class="btn btn-outline-success form-control" />
-        <a href="http://localhost:58667/Nominas" class="btn btn-outline-success form-control">Volver a Lista</a>
+        <input type="submit" value="Buscar" class="btn btn-outline-danger form-control" />
+        <a href="http://localhost:58667/Nominas" class="btn btn-outline-danger form-control">Volver a Lista</a>
     </div>
     }
 
