--- a/ProyectoFinal/Views/Permisos/Index.cshtml
+++ b/ProyectoFinal/Views/Permisos/Index.cshtml
@@ -14,8 +14,8 @@
     <div class="form-actions no-color d-flex justify-content-between">
         <input type="search" name="nomb" value="" class="form-control" placeholder="Buscar por nombre...">
 
-        <input type="submit" value="Buscar" class="btn btn-outline-success form-control" />
-        <a href="http://localhost:58667/Permisos" class="btn btn-outline-success form-control">Volver a Lista</a>
+        <input type="submit" value="Buscar" class="btn btn-outline-danger form-control" />
+        <a href="http://localhost:58667/Permisos" class="btn btn-outline-danger form-control">Volver a Lista</a>
     </div>
 }
 
