--- a/ProyectoFinal/Views/Empleados/Index.cshtml
+++ b/ProyectoFinal/Views/Empleados/Index.cshtml
@@ -14,8 +14,8 @@
     <div class="form-actions no-color d-flex justify-content-between">
         <input type="text" name="no" value="" class="form-control" placeholder="Buscar por nombre...">
         <input type="text" name="de" value="" class="form-control" placeholder="Buscar por Departamento...">
-        <input type="submit" value="Buscar" class="btn btn-outline-success form-control" />
-        <a href="http://localhost:58667/Empleados" class="btn btn-outline-success form-control">Volver a Lista</a>
+        <input type="submit" value="Buscar" class="btn btn-outline-danger form-control" />
+        <a href="http://localhost:58667/Empleados" class="btn btn-outline-danger form-control">Volver a Lista</a>
     </div>
 }
 
