--- a/ProyectoFinal/Views/Vacaciones/Create.cshtml
+++ b/ProyectoFinal/Views/Vacaciones/Create.cshtml
@@ -4,18 +4,18 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<h2>Crear</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>Vacaciones</h4>
-        <hr />
+    <h4>Vacaciones</h4>
+    <hr />
+    <div class="form-row">
+
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
+        <div class="form-group col-md-4">
             @Html.LabelFor(model => model.IdEmpleado, "IdEmpleado", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("IdEmpleado", null, htmlAttributes: new { @class = "form-control" })
@@ -23,7 +23,7 @@
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group col-md-4">
             @Html.LabelFor(model => model.CorrespondientealAÑO, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.CorrespondientealAÑO, new { htmlAttributes = new { @class = "form-control" } })
@@ -31,7 +31,7 @@
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group col-md-4">
             @Html.LabelFor(model => model.Comentarios, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Comentarios, new { htmlAttributes = new { @class = "form-control" } })
@@ -39,7 +39,7 @@
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group col-md-4">
             @Html.LabelFor(model => model.Desde, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Desde, new { htmlAttributes = new { @class = "form-control" } })
@@ -47,7 +47,7 @@
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group col-md-4">
             @Html.LabelFor(model => model.Hasta, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Hasta, new { htmlAttributes = new { @class = "form-control" } })
@@ -55,9 +55,9 @@
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group col-md-4">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Create" class="btn btn-danger" />
             </div>
         </div>
     </div>
